--- a/Desktop/FullStack_Info_HW06-master/HW6_Starter_Code/megalab_eric/HW6_Starter_Code/app/templates/base.html
+++ b/Desktop/FullStack_Info_HW06-master/HW6_Starter_Code/megalab_eric/HW6_Starter_Code/app/templates/base.html
@@ -1,11 +1,6 @@
 <html>
   <head>
-    {% if title %}
-    <title>{{ title }} - Travel</title>
-    {% else %}
-    <title>Welcome to the dopest travel app</title>
-    {% endif %}
-    <!-- Compiled and minified CSS -->
+    <title>{% block title %}{% endblock %} - Travel</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
   </head>
   <body>
