--- a/Desktop/FullStack_Info_HW06-master/HW6_Starter_Code/megalab_eric/HW6_Starter_Code/app/templates/home.html
+++ b/Desktop/FullStack_Info_HW06-master/HW6_Starter_Code/megalab_eric/HW6_Starter_Code/app/templates/home.html
@@ -1,8 +1,23 @@
 {% extends "base.html" %}
+
+
+{% block title %}
+  Survey
+{% endblock %}
+
+
+{% block header %}
+  {{ super() }}
+  <form action="logout" id="logout">
+    <span id="username">Logged in as {{ name }}</span>
+    <input class="action-button" id="logout-button" type="submit" value="Logout">
+  </form>
+{% endblock %}
+
 {% block content %}
   <div class="container">
     <div class="row">
-      <h1>Welcome to our awesome travel app</h1>
+      <h1>Welcome to our awesome travel app {{name}}</h1>
       <div class= "section">
         <a href="{{ url_for('create_trip') }}">Add a trip</a>
       </div>
